manifests/deployment-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spinnaker-istio-demo
  namespace: demo
  annotations:
    moniker.spinnaker.io/application: demo
    moniker.spinnaker.io/cluster: production
    moniker.spinnaker.io/stack: backend
  labels:
    source: demo
    app: spinnaker
spec:
  replicas: 3
  selector:
    matchLabels:
      source: demo
      app: spinnaker
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        source: demo
        app: spinnaker
    spec:
      containers:
      - name: primary
        image: index.docker.io/danryan/spinnaker-demo
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
