manifests/staging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spinnaker-istio-demo-staging
  namespace: demo
  annotations:
    moniker.spinnaker.io/application: demo
    moniker.spinnaker.io/cluster: staging
    moniker.spinnaker.io/stack: staging
  labels:
    app: demo
    source: spinnaker
    stack: staging
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
      source: spinnaker
      stack: staging
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: demo
        source: spinnaker
        stack: staging
    spec:
      containers:
      - name: primary
        image: index.docker.io/danryan/spinnaker-demo
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 8080
