manifests/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-canary
  labels:
    app: demo
    stack: canary

spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: demo
    stack: canary
