manifests/production-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-production
  labels:
    app: demo
    stack: production

spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: demo
    stack: production
