manifests/demo-destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-production
spec:
  host: demo-production.demo.svc.cluster.local
  subsets:
  - name: production
    labels:
      app: demo
      stack: production
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-staging
spec:
  host: demo-staging.demo.svc.cluster.local
  subsets:
  - name: staging
    labels:
      app: demo
      stack: staging

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-canary
spec:
  host: demo-canary.demo.svc.cluster.local
  subsets:
  - name: canary
    labels:
      app: demo
      stack: canary
