manifests/staging-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-staging
  namespace: demo
spec:
  hosts:
  - '*'
  gateways:
  - demo-staging
  http:
  - route:
    - destination:
        host: demo-staging.demo.svc.cluster.local
        subset: staging
      weight: 100
